Fixed basic spacing issues

--- a/site/themes/johnson/css/johnson.css
+++ b/site/themes/johnson/css/johnson.css
@@ -219,7 +219,7 @@ blockquote:before {
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .card {
   margin: 0;
   padding: 0;
-  min-height: 100px;
+  min-height: 50px;
 }
 
 .col-1 a:not(.btn), .col-2 a:not(.btn), .col-3 a:not(.btn), .col-4 a:not(.btn), .col-5 a:not(.btn), .col-6 a:not(.btn), .col-7 a:not(.btn), .col-8 a:not(.btn), .col-9 a:not(.btn), .col-10 a:not(.btn), .col-11 a:not(.btn), .col-12 a:not(.btn), .card a:not(.btn) {
@@ -576,6 +576,11 @@ p.card-content {
   position: relative;
 }
 
+.banner {
+  position: relative;
+  margin-bottom: 64px;
+}
+
 .hero-bg, .banner-bg {
   position: absolute;
   width: 100%;
@@ -670,6 +675,10 @@ p.card-content {
   100% {
     opacity: 1;
   }
+}
+
+.jumbotron {
+  margin-bottom: 64px;
 }
 
 .nav {
